# todo-tasks-web-app

./: .gitignore  CLAUDE.md  PERSONAL-DEPLOYMENT-GUIDE.md  README.md  main.py  pyproject.toml
.specify/: config.yaml
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
backend/src/: config.py  db.py  main.py  models.py
backend/src/middleware/: jwt_middleware.py
backend/src/routes/: auth.py  tasks.py
backend/src/services/: auth_service.py
frontend/: CLAUDE.md  (+4 more)
phase1-console/: CLAUDE.md  README.md  main.py  pyproject.toml
phase1-console/.claude/skills/spec-constitution-validator copy/: SKILL.md
phase1-console/.specify/memory/: constitution.md
phase1-console/history/prompts/001-project-setup/: 0001-create-project-setup-specification.spec.prompt.md  0002-generate-implementation-plan-for-project-setup.plan.prompt.md  0003-generate-task-breakdown-for-project-setup.tasks.prompt.md  0004-implement-project-setup-foundation.green.prompt.md
phase1-console/history/prompts/002-add-view-tasks/: 0001-create-add-view-tasks-spec.spec.prompt.md  0002-execute-implementation-planning-workflow.plan.prompt.md  0003-generate-implementation-tasks-breakdown.tasks.prompt.md  (+1 more)
phase1-console/specs/001-project-setup/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
phase1-console/specs/002-add-view-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1-console/specs/003-task-operations/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
phase1-console/src/: cli.py  main.py  storage.py  todo.py
(+44 files in other folders)
