[project]
name = "todo-app-backend"
version = "0.1.0"
description = "FastAPI backend for multi-user todo application"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlmodel>=0.0.22",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
