[project]
name = "todo-console-app"
version = "0.1.0"
description = "Phase I Python console todo application built with spec-driven development"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
